# machine_learning_template

./: .gitignore  CLAUDE.md  REPORT.md  pyproject.toml
docs/code/: 001_ridge_xgb_ngram.md  002_single_xgb_pseudo_labels.md  003_deotte_3gpu_models.md  README.md
docs/discussions/: 001_advanced_eda_technique.md  002_synthetic_artifact_totalcharges.md  003_ydf_cv_score.md  004_bartz_starter.md  005_feature_group_oof_comparison.md  006_oof_as_features.md  007_categorical_combinations_fe.md  008_original_data_reference_distribution.md  009_brute_force_combinatorics_ridge_stacking.md  010_gnn_starter.md  011_advanced_eda_comments_update.md  012_realmlp_parameter_adjustment.md  013_blending_5_diverse_models.md  README.md
experiments/20260313_01_eda/: README.md  main.py
experiments/20260313_02_logistic_regression/: README.md  classification_report.txt  main.py
experiments/20260313_03_xgboost_baseline/: README.md  classification_report.txt  main.py
experiments/20260313_04_xgboost_depth1/: README.md  classification_report.txt  main.py
experiments/20260313_05_lightgbm_baseline/: README.md  main.py
experiments/20260313_06_bartz_baseline/: README.md  classification_report.txt  main.py
experiments/20260315_01_ydf_baseline/: README.md  main.py
experiments/20260323_01_orig_data_reference/: README.md  main.py
experiments/20260323_02_xgb_optuna_tuning/: README.md  classification_report.txt  main.py  optuna_results.json  optuna_study.db  optuna_trials.csv
scripts/: create_experiment.py  plot_cv_lb.py
templates/: classification_lgbm.py  regression_lgbm.py
(+180 files in other folders)
