[project]
name = "ml-competition-template"
version = "0.1.0"
description = "Machine learning competition template"
requires-python = ">=3.11"
dependencies = [
    "numpy<2.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
]
