[project]
name = "kaggle-predict-customer-churn"
version = "0.1.0"
description = "Kaggle Playground Series S6E3: Predict Customer Churn"
requires-python = ">=3.11"
dependencies = [
    "numpy<2.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "kaggle>=2.0.0",
    "bartz==0.4.1",
]
